test/vm/fails/assert_code.js
assert(false, "msg", 1337);